--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'  // Google Services plugin
 
 android {
     compileSdkVersion 29
@@ -25,6 +26,22 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.daimajia.easing:library:2.1@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
+    dependencies {
+        // ...
+
+        // Add the Firebase SDK for Google Analytics
+        implementation 'com.google.firebase:firebase-analytics:17.2.3'
+
+        // Add the SDKs for any other Firebase products you want to use in your app
+        // For example, to use Firebase Authentication and Cloud Firestore
+        implementation 'com.google.firebase:firebase-auth:19.2.0'
+        implementation 'com.google.firebase:firebase-firestore:21.4.1'
+
+        // Getting a "Could not find" error? Make sure that you've added
+        // Google's Maven repository to your root-level build.gradle file
+    }
+
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
