--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,13 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".GodisnjiKalendar"
+
+        <activity android:name=".MesecniKalendar"
                   android:screenOrientation="portrait">
+        </activity>
+        <activity
+                android:name=".GodisnjiKalendar"
+                android:screenOrientation="portrait">
         </activity>
         <activity
                 android:name=".MainActivity"
