--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,54 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.interfacemockup.kalendar">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.interfacemockup.kalendar">
 
     <application
-            android:allowBackup="true"
-            android:fullBackupContent="true"
-            android:icon="@mipmap/ic_launcher"
+        android:allowBackup="true"
+        android:fullBackupContent="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".DetailKalendar"
+                    android:screenOrientation="portrait"></activity>
+        <activity android:name=".Info"></activity>
+        <activity
+            android:name=".MesecniKalendar"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".GodisnjiKalendar"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Info">
-        </activity>
-        <activity
-                android:name=".MesecniKalendar"
-                android:screenOrientation="portrait">
-        </activity>
-        <activity
-                android:name=".GodisnjiKalendar"
-                android:screenOrientation="portrait">
-        </activity>
-        <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name"
-                android:screenOrientation="portrait">
+            android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <meta-data
-                android:name="preloaded_fonts"
-                android:resource="@array/preloaded_fonts"/>
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
         <meta-data
-                android:name="com.google.android.gms.ads.APPLICATION_ID"
-                android:value="ca-app-pub-7920431183682527~1369121836"/> <!-- [START firebase_service] -->
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-7920431183682527~1369121836" /> <!-- [START firebase_service] -->
         <service android:name=".fcm.FirebaseMessageReceiver">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
         <service
-                android:name=".MyFirebaseMessagingService"
-                android:exported="false">
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service> <!-- [END firebase_service] -->
         <!-- [START fcm_default_icon] -->
@@ -61,21 +60,21 @@
      See README(https://goo.gl/l4GJaQ) for more.
         -->
         <meta-data
-                android:name="firebase_messaging_auto_init_enabled"
-                android:value="false"/>
+            android:name="firebase_messaging_auto_init_enabled"
+            android:value="false" />
         <meta-data
-                android:name="firebase_analytics_collection_enabled"
-                android:value="false"/>
+            android:name="firebase_analytics_collection_enabled"
+            android:value="false" />
         <meta-data
-                android:name="com.google.firebase.messaging.default_notification_icon"
-                android:resource="@drawable/common_google_signin_btn_icon_light"/>
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/common_google_signin_btn_icon_light" />
         <!--
  Set color used with incoming notification messages. This is used when no color is set for the incoming
              notification message. See README(https://goo.gl/6BKBk7) for more.
         -->
         <meta-data
-                android:name="com.google.firebase.messaging.default_notification_color"
-                android:resource="@color/colorAccent"/>
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
     </application>
 
 </manifest>
