--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     // Circle Image>View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 }
