Poceo sam sa Molitve Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Molitve"></activity>
         <activity
             android:name=".Katihizis"
             android:screenOrientation="portrait"
