--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".KatihizisDetail"></activity>
+        <activity android:name=".KatihizisDetail"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity
             android:name=".KatihizisDva"
             android:screenOrientation="portrait"
@@ -55,7 +57,8 @@
             android:resource="@array/preloaded_fonts" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-7920431183682527~1369121836" /> <!-- [START firebase_service] -->
+            android:value="ca-app-pub-7920431183682527~1369121836" />
+        <!-- [START firebase_service] -->
         <service android:name=".fcm.FirebaseMessageReceiver">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
